# Rust

Rusto Forumo/: Cargo.toml  ReadMe.txt
Rusto Forumo/migrations/2018-11-19-041438_user_creation/: up.sql
Rusto Forumo/migrations/2018-11-19-041444_post_creation/: up.sql
Rusto Forumo/migrations/2018-11-19-041507_group_creation/: down.sql  up.sql
Rusto Forumo/migrations/2018-11-19-041639_super_user_creation/: down.sql  up.sql
Rusto Forumo/src/: lib.rs  schema.rs
Rusto Forumo/src/post_submission/: mod.rs  post_form.rs  post_model.rs
Rusto Forumo/src/user_authentication/: mod.rs  user_forms.rs  user_model.rs
Rusto Forumo/templates/: base.html.tera
Rusto Forumo/templates/post_submission/: deletion.html.tera  home.html.tera  modify.html.tera  starter.html.tera  viewer.html.tera
Rusto Forumo/templates/user_authentication/: login.html.tera  registration.html.tera  user_settings.html.tera
Rusto Forumo/webpage_design/: web.css
