[package]
name = "rusto_forumo"
version = "0.1.0"
authors = ["jake"]
edition = "2018"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "populate"
path = "src/bin/populate.rs"

[lib]
name = "rusto_lib"
path = "src/lib.rs"

[dependencies]

rocket = "0.3.11"
rocket_codegen = "0.3.11"
rocket_contrib = { version = "0.3.11", default-features = false, features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"

bcrypt = "0.2"
chrono = { version = "0.4", features=["serde"] }
diesel = { version = "1.3", features = ["chrono", "postgres", "r2d2"] }
diesel_derives = { version = "1.3", features = ["postgres"] }
fake = "1.2"

dotenv = "0.11"


